add FirstName, LastName and Email to Manage

--- a/src/uLearn.Web/Views/Account/StudentInfo.cshtml
+++ b/src/uLearn.Web/Views/Account/StudentInfo.cshtml
@@ -1,8 +1,8 @@
-﻿@model ApplicationUser
+﻿@model LtiUserViewModel
 
 @{
 	Layout = null;
-	var groups = new[] { "Вольнослушатель", "УрФУ КН-", "УрФУ КБ-", "УрФУ ФИИТ-", "ИжГТУ" };
+	
 }
 
 <!DOCTYPE html>
@@ -19,13 +19,13 @@
 			@using (Html.BeginForm("StudentInfo", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 			{
 				<div class="form-group">
-					@Html.Label("Имя", new { @class = "col-md-1 control-label" })
+					@Html.LabelFor(m => m.FirstName, new { @class = "col-md-1 control-label" })
 					<div class="col-md-10">
 						@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
 					</div>
 				</div>
 				<div class="form-group">
-					@Html.Label("Фамилия", new { @class = "col-md-1 control-label" })
+					@Html.LabelFor(m => m.LastName, new { @class = "col-md-1 control-label" })
 					<div class="col-md-10">
 						@Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
 					</div>
@@ -37,15 +37,10 @@
 					</div>
 				</div>
 				<div class="form-group">
-					@Html.Label("Группа", new { @class = "col-md-1 control-label" })
+					@Html.LabelFor(m => m.GroupName, new { @class = "col-md-1 control-label" })
 					<div class="col-md-10">
-						@Html.TextBoxFor(m => m.GroupName, new { @class = "form-control", list = "defaultGroups" })
-						<datalist id="defaultGroups">
-							@foreach (var group in groups)
-							{
-								<option>@group</option>
-							}
-						</datalist>
+						@Html.TextBoxFor(m => m.GroupName, new { @class = "form-control", list = "groupsList" })
+						@Html.Partial("_GroupsPrompt")
 					</div>
 				</div>
 				<div class="form-group">
