--- a/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
@@ -22,9 +22,28 @@
 		</div>
 	</div>
 	<div class="form-group">
+		@Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
+		<div class="col-md-10">
+			@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
+		<div class="col-md-10">
+			@Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+		<div class="col-md-10">
+			@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+		</div>
+	</div>
+	<div class="form-group">
 		@Html.LabelFor(m => m.GroupName, new { @class = "col-md-2 control-label" })
 		<div class="col-md-10">
-			@Html.TextBoxFor(m => m.GroupName, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.GroupName, new { @class = "form-control", list = "groupsList" })
+			@Html.Partial("_GroupsPrompt")
 		</div>
 	</div>
 	if (!Model.HasPassword)
