--- a/src/uLearn.Web/Views/Account/StudentInfo.cshtml
+++ b/src/uLearn.Web/Views/Account/StudentInfo.cshtml
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<div>
-			<h2>Нам точно нужны эти данные!</h2>
+			<p>Эти данные смогут использовать преподаватели, чтобы следить за успеваемостью в своих учебных группах.</p>
 
 			@using (Html.BeginForm("StudentInfo", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 			{
