--- a/src/uLearn.Web/Views/Shared/_GroupsPrompt.cshtml
+++ b/src/uLearn.Web/Views/Shared/_GroupsPrompt.cshtml
@@ -1,5 +1,11 @@
 ﻿@{
-	var groups = new[] { "Вольнослушатель", "УрФУ КН-", "УрФУ КБ-", "УрФУ ФИИТ-", "ИжГТУ" };
+	var groups = new[] { 
+		"КБ-101 УрФУ", 
+		"КН-101 УрФУ", "КН-102 УрФУ", 
+		"ПИ-101 УрФУ", 
+		"ФИИТ-101 УрФУ", 
+		"ИжГТУ", 
+		"Вольнослушатель" };
 }
 
 <datalist id="groupsList">
