--- a/src/uLearn.Web/Views/Course/LtiSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiSlide.cshtml
@@ -8,8 +8,9 @@
 
 <html>
 	<head>
-		<title>title</title>
+		<title>Not supported slide type</title>
 	</head>
-	<body>
-	</body>
+<body>
+Not supported slide type
+</body>
 </html>
