--- a/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
@@ -7,18 +7,20 @@
 
 <!DOCTYPE html>
 <html>
-	<head>
-		@Styles.Render("~/css")
-	</head>
-	<body>
-		@if (Model != null)
-		{
-			@SlideHtml.Block(Model.ExerciseBlock, Model.Context)
+<head>
+	<title>Exercise</title>
+	@Styles.Render("~/css")
+</head>
+<body class="lti-component">
+	@if (Model != null)
+	{
+		@SlideHtml.Block(Model.ExerciseBlock, Model.Context)
 
-			@Scripts.Render("~/main-js")
-			<script> getHints("@Model.CourseId", "@Model.SlideIndex", '@Model.ExerciseBlock.HintsMd.Count') </script>
-			ExerciseBlockData data = Model.Context.GetBlockData(Model.ExerciseBlock);
-			<script> refreshPreviousDraft('@(data.LatestAcceptedSolution != null)', '@Model.SlideId') </script>
-		}
-	</body>
+		@Scripts.Render("~/main-js")
+		<script> getHints("@Model.CourseId", "@Model.SlideIndex", '@Model.ExerciseBlock.HintsMd.Count') </script>
+		ExerciseBlockData data = Model.Context.GetBlockData(Model.ExerciseBlock);
+		<script> refreshPreviousDraft('@(data.LatestAcceptedSolution != null)', '@Model.SlideId') </script>
+	}
+</body>
+
 </html>
