--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -167,6 +167,8 @@
 					</li>
 				}
 			</ol>
+			<h3>Комментарий после решения</h3>
+			<p>@block.CommentAfterExerciseIsSolved</p>
 		</div>
 	}
 }
