--- a/src/uLearn.Web/Views/RestorePassword/Index.cshtml
+++ b/src/uLearn.Web/Views/RestorePassword/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div>
+<div class="container">
 	@using (Html.BeginForm("Index", "RestorePassword", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 	{
 		<h2>Восстановление пароля</h2>
