--- a/src/uLearn.Web/Views/Login/Index.cshtml
+++ b/src/uLearn.Web/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model uLearn.Web.Models.LoginViewModel
+﻿@model LoginViewModel
 
 @{
 	ViewBag.Title = "Вход";
@@ -8,7 +8,7 @@
 	<div class="row">
 		<div class="col-md-8">
 			<section id="loginForm">
-				@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+				@using (Html.BeginForm("Index", "Login", new { ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 				{
 					@Html.AntiForgeryToken()
 					@Html.ValidationSummary(true)
@@ -43,14 +43,14 @@
 						</div>
 				</div>
 					<p>
-						@Html.ActionLink("Зарегистрируйтесь", "Register", new {ReturnUrl=ViewBag.ReturnUrl}), если у вас ещё нет аккаунта.
+						@Html.ActionLink("Зарегистрируйтесь", "Register", "Account", new { ViewBag.ReturnUrl }, new {}), если у вас ещё нет аккаунта.
 					</p>
 				}
 			</section>
 		</div>
 		<div class="col-md-4">
 			<section id="socialLoginForm">
-				@Html.Partial("_ExternalLoginsListPartial", new { Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
+				@Html.Partial("_ExternalLoginsListPartial", new ExternalLoginsListModel{ Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
 			</section>
 		</div>
 	</div>
