--- a/src/uLearn.Web/Views/RestorePassword/Index.cshtml
+++ b/src/uLearn.Web/Views/RestorePassword/Index.cshtml
@@ -9,10 +9,13 @@
 	@using (Html.BeginForm("Index", "RestorePassword", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 	{
 		<h2>Восстановление пароля</h2>
-		<p class="@(Model.HasError ? "text-danger" : "text-success")">@Model.Message</p>
+		foreach (var message in Model.Messages)
+		{
+			<p class="@(message.IsError ? "text-danger" : "text-success")">@message.Text</p>
+		}
 		@Html.AntiForgeryToken()
 		<div class="form-group">
-			@Html.Label("Имя пользователя", new { @class = "col-md-2 control-label" })
+			@Html.Label("Имя пользователя или Email", new { @class = "col-md-2 control-label" })
 			<div class="col-md-10">
 				@Html.TextBox("username", Model.UserName, new { @class = "form-control" })
 			</div>
