--- a/src/uLearn.Web/Views/Account/Info.cshtml
+++ b/src/uLearn.Web/Views/Account/Info.cshtml
@@ -32,6 +32,7 @@
 		<h3>Сброс пароля</h3>
 		using(Html.BeginForm("ResetPassword", "Account", new { newPassword, userId = Model.User.Id }))
 		{
+			@Html.AntiForgeryToken()
 			<button class="btn btn-danger"> Сбросить пароль в @newPassword </button>
 		}
 	}
