Курс Хакердома на главную. Добавил доп-контроль в quiz-ы.

--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -66,5 +66,14 @@
 				<a href="https://cleancodegame.github.io">Поехали!</a>
 			</p>
 		</div>
+		<div class="course-tile col-md-6">
+			<h2>Основы компьютерной безопасности</h2>
+			<p>Длительность: 1 семестр, 2-6 часов в неделю</p>
+			<p>
+				Курс разработан для студентов первого и второго года обучения компьютерных специальностей ИМКН УрФУ.
+				Расcчитан на людей с минимальным опытом программирования.
+			</p>
+			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Hackerdom" }, null)</p>
+		</div>
 	</div>
 </div>
