Add spelling errors explanation Add more words in standard dictionary

--- a/src/uLearn.Web/Views/Unit/SpellingErrors.cshtml
+++ b/src/uLearn.Web/Views/Unit/SpellingErrors.cshtml
@@ -1,11 +1,29 @@
 ﻿@model string[]
 
-@foreach (var error in Model)
-{
-	<pre>@error</pre>
-}
 
-@if (!Model.Any())
+@if (Model.Any())
+{
+	foreach (var error in Model)
+	{
+		<pre>@error</pre>
+	}
+	<p>
+		Включите в архив с курсом файл dictionary.txt с исключениями, чтобы убрать ложные срабатывания.
+
+		Формат файла dictionary.txt — по одному слову в строке. Через двоеточие можно указать известное слово, которое склоняется так же как и новое.
+		Пример:
+
+		<pre>
+биткоин:воин
+очепятки:опечатки
+распознаться:делаться
+Ктулху
+шарп:карп
+		</pre>
+
+	</p>
+}
+else
 {
 	<p>Орфографических ошибок нет.</p>
 }
