add guest view mode

--- a/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
@@ -1,5 +1,4 @@
-﻿@using uLearn
-@using uLearn.Web.Views.Course
+﻿@using uLearn.Web.Views.Course
 @model AcceptedSolutionsPageModel
 
 @{
@@ -14,7 +13,7 @@
 			<div class="row">
 				<h1 class='page-header'>Решения</h1>
 				@AcceptedSolutionsHtml.AcceptedSolutions(Model)
-				@Html.Action("PrevNextButtons", "SlideNavigation", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index, onSolutionsSlide = true })
+				@Html.Action("PrevNextButtons", "SlideNavigation", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index, onSolutionsSlide = true, isGuest = false })
 			</div>
 		</div>
 	</div>
