--- a/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
@@ -7,10 +7,10 @@
 	<a class="btn btn-default no-rounds ctrl-group"
 		id="prev_slide_button"
 		href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.PrevSlideIndex})">Назад</a>
-	<a class="btn btn-default block-next no-rounds ctrl-group next_button"
+	<a class="btn btn-default @(Model.IsGuest ? "" : "block-next") no-rounds ctrl-group next_button"
 		id="next_solutions_button"
 		href="@Url.Action("AcceptedSolutions", "Course", new {courseId = Model.CourseId, slideIndex = Model.SlideIndex})">Далее</a>
-	<a class="btn btn-default block-next no-rounds ctrl-group next_button"
+	<a class="btn btn-default @(Model.IsGuest ? "" : "block-next") no-rounds ctrl-group next_button"
 		id="next_slide_button"
 		href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.NextSlideIndex})">Далее</a>
 </div>
