add "all time"/"last half-year" switch for quiz statistic

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -28,6 +28,9 @@
 .code, .code-exercise {
 }
 
+.statistic-container {
+}
+
 /* ReSharper restore Html.CssClassElementsNotFound */
 /* ReSharper restore DeclarationIsEmpty */
 /*#endregion */
