--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -57,6 +57,12 @@
 	}
 	if (User.IsInRole(LmsRoles.Instructor))
 	{
-		<div class="load-content" data-url="@Url.Action("Analytics", "Quiz", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index })"> </div>
+		<h2>Статистика ответов</h2>
+		<div class="btn-group">
+			<button type="button" class="btn btn-default btn-primary" onclick="ShowQuizStatistic(event)" data-div-id="quiz-statistic-new">За полгода</button>
+			<button type="button" class="btn btn-default" onclick="ShowQuizStatistic(event)" data-div-id="quiz-statistic-all">За всё время</button>
+		</div>
+		<div id="quiz-statistic-new" class="statistic-container load-content" data-url="@Url.Action("Analytics", "Quiz", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index })"></div>
+		<div id="quiz-statistic-all" class="statistic-container" data-url="@Url.Action("Analytics", "Quiz", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index, onlyNew = false })"></div>
 	}
 }
