Web: Fix login text

--- a/src/uLearn.Web/Views/Course/_LoginForContinue.cshtml
+++ b/src/uLearn.Web/Views/Course/_LoginForContinue.cshtml
@@ -7,13 +7,13 @@
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				<h4 class="modal-title">Внимание</h4>
+				<h4 class="modal-title">Практика, практика и еще раз практика!</h4>
 			</div>
 			<div class="modal-body">
 				<p>
 					@Html.ActionLink("Войдите", "Index", "Login", new { returnUrl = Url.Action() }, null) или
 					@Html.ActionLink("зарегистрируйтесь", "Register", "Account", new { returnUrl = Url.Action() }, null),
-					чтобы решать тесты и сдавать задачи.
+					чтобы отвечать на тесты и решать задачи.
 				</p>
 			</div>
 		</div>
