--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -79,5 +79,5 @@
 </div>
 
 <script>
-	uploadVisiters("@Url.Action("Upload", "Visiters")")
+	uploadVisits("@Url.Action("Upload", "Visits")")
 </script>
